# QuizApp

./: README.md
backend/: .env  pyproject.toml
backend/Quiz/: models.py  quiz_gen.py  views.py
backend/QuizApp/: gunicorn.conf.py  req.txt  settings.py  urls.py
backend/QuizApp/Quiz/: Serializer.py
backend/QuizApp/Quiz/migrations/: 0001_initial.py  0002_remove_user_name_alter_user_username.py  0003_question_user_answer.py
backend/QuizApp/QuizApp/: settings.py  urls.py
frontend/: .env  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/Authe/: Form.jsx  SignIn.jsx  SignUp.jsx
frontend/src/Componnents/: Context.jsx  GenerateQuestion.jsx  History.jsx  Home.jsx  Homepage.jsx  MCQuestion.jsx  Navebare.jsx
frontend/src/Css/: Form.css  GenerateQuestion.css  History.css  HomePage.css  Login.css  MCQuestion.css  Navbar.css  SignIn.css  generale.css  main.css
